--- a/gulp/src/include/_globalHeader.jade
+++ b/gulp/src/include/_globalHeader.jade
@@ -1,15 +1,17 @@
 .globalHeader
 	.globalHeaderLogos 
-		h1 
-			a(href="#/") 世界樹の迷宮5 キャラクターマネージャー
+		.contentWrap
+			h1 
+				a(href="#/") 世界樹の迷宮5 キャラクターマネージャー
 	.globalHeaderNav
-		ul
-			li
-				a(href="#/characters") キャラクター
-			li
-				a(href="#/parties") パーティ
-			li
-				a(href="#/skill_list") スキル一覧
-			li
-				a(href="#/options") オプション
-	
+		.contentWrap
+			ul
+				li
+					a(href="#/characters") キャラクター
+				li
+					a(href="#/parties") パーティ
+				li
+					a(href="#/skill_list") スキル一覧
+				li
+					a(href="#/options") オプション
+		
