--- a/gulp/src/view/tops.jade
+++ b/gulp/src/view/tops.jade
@@ -1,4 +1,4 @@
-.introSection
+.contentWrap.introSection
 	h2.sectionHeadline これはなに？
 	p.lead 世界樹の迷宮5にてパーティ編成中に所持スキルが見えないという致命的欠陥が使い悪すぎるので、それをサポートするコンテンツです。
 	h2.sectionHeadline どうやって使うの？
