--- a/gulp/src/css/_buttons.scss
+++ b/gulp/src/css/_buttons.scss
@@ -59,3 +59,23 @@
 .actionButtonArea{}
 .linkButtonARea{}
 .buttonGroup{}
+
+.btnBase{
+	display: inline-block;
+	padding:8px 16px;
+	text-align: center;
+	min-width:100px;
+	color:#fff;
+	text-decoration: none;
+	font-size: 14px;
+	cursor: pointer;
+	&.block{
+		display: block;
+		width: 100%;
+		max-width: auto;
+	}
+	&.primary{
+		border: 1px solid nth($themeColor,2);
+		background:darken(nth($themeColor,1),10%);
+	}
+}
